--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.6.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/formidable": "^2.0.5",
     "@types/node": "18.8.5",
     "@types/react": "18.0.21",
